# news-pickup-assistant

./: .env.example  .gitignore  README.md  pyproject.toml  start-news-pickup-assistant.command
app/: __init__.py  main.py
app/api/: deps.py
app/core/: config.py  source_catalog.py
app/crawler/: base.py  crawl4ai_client.py  feed_client.py  index_page_client.py
app/db/: init_db.py  schema.py  session.py
app/domain/: __init__.py  crawl_job.py  extracted_document.py  ranked_item.py  raw_document.py  source.py  user_feedback.py
app/extractor/: __init__.py  normalizer.py  parser.py  sanitizer.py
app/providers/: base.py  ollama.py  schemas.py
app/scheduler/: __init__.py  jobs.py  runner.py
app/services/: analysis_service.py  archive_service.py  bootstrap_service.py  extraction_service.py  feedback_service.py  ingestion_service.py  orchestration_service.py  presentation_service.py  ranking_service.py  scheduler_service.py  slack_notification_service.py  slack_settings_service.py  source_service.py  trending_service.py
app/ui/: __init__.py  layout.py
codex-set /: AGENTS.md  ARCHITECTURE.md  CODEX_PROMPT.md  DOCKER_POLICY.md  PROJECT.md  README.md  TASK_BREAKDOWN.md
docs/: architecture.md  security.md
infra/compose/: docker-compose.yml
infra/docker/: api.Dockerfile  collector.Dockerfile  worker.Dockerfile
scripts/: run_scheduled_job.py
tests/: conftest.py
tests/unit/: test_analysis_service.py  test_archive_service.py  test_crawl4ai_collector.py  test_db_init.py  test_extraction_service.py  test_feed_collector.py  test_feedback_service.py  (+13 more)
(+17 files in other folders)
