[project]
name = "curation-agent"
version = "0.1.0"
description = "Security-first news curation agent with FastAPI and Ollama."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "crawl4ai>=0.7,<0.9",
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.3,<9.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
